--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	project.ext {
-         bootVersion = '1.2.3.RELEASE'
+         bootVersion = '1.4.4.RELEASE'
 		 cloudVersion = '1.0.0.RELEASE'
     }
     repositories {
@@ -10,14 +10,13 @@ buildscript {
     
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${project.bootVersion}"
-        classpath 'se.transmode.gradle:gradle-docker:1.2'
     }
 }
 
 apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'java'
-apply plugin: 'docker'
+apply plugin: 'io.spring.dependency-management'
 
 
 jar {
@@ -38,8 +37,12 @@ dependencies {
     testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
 }
 
-group = 'dmall'
-mainClassName = 'com.dmall.config.Application'
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR6'
+    }
+}
+
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
