update image version

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   dmall-config-server:
-      image: dmall-docker-registry:5000/dmall/config-server:latest
+      image: dmall-docker-registry:5000/dmall/config-server:$BUILD_NUMBER
       mem_limit: 512m
       networks:
           - jenkins_dmall-network
