--- a/build.gradle
+++ b/build.gradle
@@ -1,53 +1,48 @@
 buildscript {
-	project.ext {
-         bootVersion = '1.4.4.RELEASE'
-		 cloudVersion = '1.0.0.RELEASE'
+    ext {
+        springBootVersion = '1.4.7.RELEASE'
     }
     repositories {
         mavenCentral()
-        jcenter()
     }
-    
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${project.bootVersion}"
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
+apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
 
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
 
 jar {
     baseName = 'config-server'
     version =  '0.0.1'
 }
 
-repositories { 
-	mavenCentral() 
-	jcenter()
+repositories {
+    mavenCentral()
 }
+
+
+ext {
+    springCloudVersion = 'Camden.SR7'
+}
+
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:${project.bootVersion}")    
-    compile("org.springframework.boot:spring-boot-starter-actuator:${project.bootVersion}")
-	compile("org.springframework.cloud:spring-cloud-config-server:1.0.0.RELEASE")
-    
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-    testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
+    compile('org.springframework.cloud:spring-cloud-config-server')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR6'
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
-
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 task createWrapper(type: Wrapper) {
     gradleVersion = '2.0'
 }
-
